virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: colors
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: colors
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: logger
spec:
  hosts:
  - "logger.10.103.59.158.nip.io"
  - "logger-10-103-59-158.nip.io"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: logger-frontend
---
